lots of updates (worst commit message ever)

--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,16 @@ body {
     left: 0;
     background-color: #002424;
 }
+#banner-container{
+    position: relative;
+    width: 200px;
+    margin: 0 auto;
+}
+#banner-container img{
+    margin: 40px 0;
+    width: 100%;
+}
+
 #spacemenu a{
   text-decoration: none;
 }
@@ -42,8 +52,7 @@ body {
     position: absolute;
     width: 40%;
     left: 30%;
-    top:20%;
-
+    top:30%;
 }
 .menubox{
     position: absolute;
@@ -325,6 +334,40 @@ canvas {
 .fa-caret-right {
     transition: 0.1s;
 }
+#ask-to-click{
+    position: absolute;
+    left: 0;
+    bottom: 50px;
+    font-size: 50px;
+    color: white;
+    width: 460px;
+    cursor: pointer;
+    text-align: center;
+    transition: 0.2s;
+    animation: pulse 1s infinite;
+}
+#ask-to-click.reduced{
+    bottom: 20px;
+    font-size: 14px;
+}
+#ask-to-click:hover{
+    transform: scale(1.2);
+}
+
+
+@keyframes pulse {
+    0% {
+      transform: scale(0.95);
+    }
+    
+    70% {
+      transform: scale(1.1);
+    }
+    
+    100% {
+      transform: scale(0.95);
+    }
+  }
 .contentbott {
     position: absolute;
     margin: 0 5px 5px 5px;
@@ -349,7 +392,7 @@ canvas {
     display: none;
 }
 #research {
-    background-image: url("imagens/fundoresearch.png");
+    background-image: url("style/images/fundoresearch.png");
 }
 .contentbott h2 {
     margin: 0;
